--- a/sass/_large.scss
+++ b/sass/_large.scss
@@ -14,7 +14,6 @@ nav {
 	.topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -31,21 +30,35 @@ nav {
 
 /* ------------- MAIN ------------- */
 main {
-
-    figure {
+    #main-div {
         
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        
+        .lead {
+            grid-row: 1 / span 2;
+            grid-column: 1 / span 2;
+        }
+        .secondTop {
+            grid-row: 1;
+            grid-column: 3 / span 2;
+        }
+        .secondBottom {
+            grid-row: 2;
+            grid-column: 3 / span 2;
+        }
     }
-    @for $i from 1 through 12 {
-        $w: ($i / 12) * 100%;
-        .large-#{$i} {width: $w; float: left;}
-    }
-    .space {
-        display: block;
+}//end main
+
+
+footer {
+    .footer-div {
+        .links-div {
+    .section-links {
+                width: 25%;
+            }
+        }
     }
 }
-
-
-
 
 
 
